# Stopping-Power

./: Makefile  README.md  pyproject.toml  stopping_power.c  stopping_power.h  stopping_power.py  test_stopping_power.py
Tables/: D_in_Al  H_in_CR39  H_in_My  T_in_Ta
stopping_power/: stopping_power.py
stopping_power/Tables/: D_in_Ta  H_in_Al  H_in_Au  H_in_HDC  H_in_Ni  H_in_Ta  T_in_Al
