[project]
name = "Stopping-Power"
version = "0.0.1"

authors = [
    { name="Timothy Johnson", email="tmarkj@mit.edu"}, 
]
description = "An SRIM stopping power package for python and c"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

